--- a/src/main/webapp/index.zul
+++ b/src/main/webapp/index.zul
@@ -1,12 +1,39 @@
 <zk>
-	<window apply="br.estudos.controller.LoginController" width="100%"
-		height="100%">
+	<window id="win" apply="br.estudos.controller.IndexController"
+		width="100%" height="100%">
 
 		<vbox align="center" pack="center" width="100%" height="100%">
-			<label style="font-size: 20pt">PATRIMÔNIOS</label>
-			<textbox placeholder="Usuário"></textbox>
-			<textbox placeholder="Senha" type="password"></textbox>
-			<button id="btnLogin">Login</button>
+			<vbox align="center" pack="center" width="50%"
+				height="100%">
+				<label style="font-size: 20pt">
+					Este é o portal de acesso de patrimônios
+				</label>
+				<space></space>
+				<label style="font-size: 15pt">
+					O cadastro, consulta e correção de patrimônios das
+					Igrejas pertencentes à Paróquia Redenção são feitos
+					através deste portal. Selecione uma das opções
+					abaixo.
+				</label>
+				<space></space>
+				<hbox>
+					<button id="btnPossuoAcesso">Já possuo acesso</button>
+					<button id="btnSolicitarAcesso">Solicitar acesso</button>
+				</hbox>
+			</vbox>
 		</vbox>
+
+		<!--
+			<vbox align="center" pack="center" width="100%" height="100%">
+			<label style="font-size: 20pt">PATRIMÔNIOS</label>
+			<textbox id="txtUsuario" placeholder="Usuário"
+			value="marcos">
+			</textbox>
+			<textbox id="txtSenha" placeholder="Senha" type="password"
+			value="123">
+			</textbox>
+			<button id="btnLogin" style="background-color: #228B22">Acessar</button>
+			</vbox>
+		-->
 	</window>
 </zk>
