--- a/src/main/webapp/index.zul
+++ b/src/main/webapp/index.zul
@@ -17,23 +17,15 @@
 				</label>
 				<space></space>
 				<hbox>
-					<button id="btnPossuoAcesso">Já possuo acesso</button>
-					<button id="btnSolicitarAcesso">Solicitar acesso</button>
+					<button id="btnPossuoAcesso" focus="true">
+						Já possuo acesso
+					</button>
+					<button id="btnSolicitarAcesso">
+						Solicitar acesso
+					</button>
 				</hbox>
 			</vbox>
 		</vbox>
 
-		<!--
-			<vbox align="center" pack="center" width="100%" height="100%">
-			<label style="font-size: 20pt">PATRIMÔNIOS</label>
-			<textbox id="txtUsuario" placeholder="Usuário"
-			value="marcos">
-			</textbox>
-			<textbox id="txtSenha" placeholder="Senha" type="password"
-			value="123">
-			</textbox>
-			<button id="btnLogin" style="background-color: #228B22">Acessar</button>
-			</vbox>
-		-->
 	</window>
 </zk>
